--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,41 +1,87 @@
 /* General rules */
+
+
 /* General rules */
-*{
+
+* {
     margin: 0;
 }
-header{
+
+header {
     background: #ADADAD;
 }
-.header-div{
+
+.header-div {
     display: grid;
-    grid-template-columns: repeat(7,1fr);
+    grid-template-columns: repeat(7, 1fr);
     /* grid-auto-flow: column; */
     padding-top: 20px;
     padding-bottom: 25px;
     justify-items: center;
 }
-.first-section{
+
+.first-section {
     /* background: blueviolet; */
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    
+    grid-template-columns: repeat(2, 1fr);
     align-content: center;
 }
-.content{
+
+.content {
     /* border: 1px solid #000; */
     height: 900px;
     display: flex;
     align-items: center;
 }
-.content:nth-child(1){
+
+.content:nth-child(1) {
     background: #808080;
 }
-.content:nth-child(2){
+
+.content:nth-child(2) {
     background: #8D8D8D;
 }
-.content:nth-child(3){
+
+.content:nth-child(3) {
     background: #8D8D8D;
 }
-.content:nth-child(4){
+
+.content:nth-child(4) {
     background: #808080;
+}
+
+.latest-posts {
+    background: rgba(128, 128, 128, 0.7);
+    display: flex;
+    flex-direction: column;
+}
+
+.latest-post-items {
+    margin-left: 7%;
+    max-width: 50%;
+}
+
+.item1 {
+    margin-top: 3%;
+    margin-bottom: 1%;
+}
+
+.item3 {
+    background: white;
+    width: 300px;
+    height: 50px;
+    border-radius: 20px;
+    margin-left: 10%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+.latest-post-items li {
+    list-style: circle;
+    font-size: 19px;
+    line-height: 30px;
+}
+
+.latest-post-items p {
+    font-size: 30px;
 }
