--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,18 +85,106 @@ header {
 .latest-post-items p {
     font-size: 30px;
 }
-.community{
+
+.community {
     display: grid;
-    grid-template: repeat(5,1fr) / repeat(4, 1fr);
-    border: 1px solid #000;
-    grid-auto-flow: dense;
+    grid-template-areas: "childone childtwo childthree childfour""childfive childfive childsix childseven""childfive childfive . . ""childeight childnine childten childten"" . . childten childten";
+    height: 1900px;
+    margin: 0 5%;
 }
-.community>div{
-    width: 350px;
-    height: 500px;
-    background: cornflowerblue;
-    border: 1px solid #000;
+
+.community>* {
+    padding: 5%;
+    text-align: justify;
+    line-height: 2;
 }
-.green-jumbotron{
-    background: green;
+
+.community-title {
+    font-size: 25px;
+    text-align: center;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.community-author {
+    font-size: 19px;
+    font-weight: bold;
+}
+
+.child1 {
+    grid-area: childone;
+    margin-bottom: 0;
+}
+
+.child2 {
+    grid-area: childtwo;
+}
+
+.child3 {
+    grid-area: childthree;
+}
+
+.child4 {
+    grid-area: childfour;
+    background: #808080;
+    margin: 20%;
+    height: 40%;
+    width: 80%;
+    border-radius: 15px;
+}
+
+.child5 {
+    grid-area: childfive;
+    margin: 4%;
+    background: #8D8D8D;
+    border-radius: 15px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.child6 {
+    grid-area: childsix;
+}
+
+.child7 {
+    grid-area: childseven;
+}
+
+.child8 {
+    grid-area: childeight;
+}
+
+.child9 {
+    grid-area: childnine;
+}
+
+.child10 {
+    grid-area: childten;
+    margin: 4%;
+    background: #8D8D8D;
+    border-radius: 15px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.community-box-child {
+    background: white;
+    height: 60px;
+    width: 300px;
+    border-radius: 15px;
+}
+
+.green-jumbotron {
+    background: lightgray;
+    display: flex;
+    flex-direction: column;
+    height: 800px;
+    justify-content: center;
+    align-items: center;
+}
+
+.green-jumbotron>* {
+    margin: 40px 0;
 }
