Adding some content to the HTML and styled the person of the week section

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -188,3 +188,68 @@ header {
 .green-jumbotron>* {
     margin: 40px 0;
 }
+/*  */
+.person-of-the-week{
+    padding-top:  55px;
+    background: blueviolet;
+    display: flex;
+    height: 250px;
+    justify-content: space-around;
+}
+ .picture{
+    height: 200px;
+    width: 200px;
+    background: #fff;
+    border: 1px solid #000;
+    margin: 0 55px;
+    border-radius: 10px;
+    transform: rotate(-25deg);
+}
+.persons-achievements h3{
+    text-transform: uppercase;
+    margin-bottom: 25px;
+}
+.persons-achievements p{
+    font-size: 1.3rem;
+    padding-right: 15px;
+}
+/*  */
+.other-persons{
+    background: grey;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    padding: 25px 0;
+    padding-left: 20px;
+    font-size: 1.1rem;
+}
+.photo{
+    width: 80px;
+    height: 80px;
+    background: #fff;
+    border-radius: 5px;
+    transform: rotate(-15deg);
+    border: 1px solid #000;
+    margin-right: 15px;
+}
+.item{
+    /* border: 1px solid red; */
+    display: flex;
+}
+/*  */
+.center-section{
+    background: blue;
+    height: 200px;
+    display: flex;
+}
+.table-of-content{
+    width: 300px;
+    height: 30px;
+    background: #fff;
+    border-radius: 6px;
+}
+.book{
+   width: 50px;
+   height: 300px; 
+   background: #fff;
+}
