--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,6 +5,8 @@
 
 * {
     margin: 0;
+    background: lightgrey;
+    ;
 }
 
 header {
@@ -177,7 +179,7 @@ header {
 }
 
 .green-jumbotron {
-    background: lightgray;
+    background: darkgrey;
     display: flex;
     flex-direction: column;
     height: 800px;
@@ -188,15 +190,19 @@ header {
 .green-jumbotron>* {
     margin: 40px 0;
 }
+
+
 /*  */
-.person-of-the-week{
-    padding-top:  55px;
-    background: blueviolet;
+
+.person-of-the-week {
+    padding-top: 55px;
     display: flex;
-    height: 250px;
+    height: 350px;
     justify-content: space-around;
+    line-height: 2;
 }
- .picture{
+
+.picture {
     height: 200px;
     width: 200px;
     background: #fff;
@@ -205,25 +211,33 @@ header {
     border-radius: 10px;
     transform: rotate(-25deg);
 }
-.persons-achievements h3{
+
+.persons-achievements h3 {
     text-transform: uppercase;
     margin-bottom: 25px;
 }
-.persons-achievements p{
+
+.persons-achievements p {
     font-size: 1.3rem;
     padding-right: 15px;
 }
+
+
 /*  */
-.other-persons{
-    background: grey;
+
+.other-persons {
+    background: lightgrey;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 20px;
     padding: 25px 0;
     padding-left: 20px;
     font-size: 1.1rem;
+    height: 1000px;
+    margin: 5%;
 }
-.photo{
+
+.photo {
     width: 80px;
     height: 80px;
     background: #fff;
@@ -232,24 +246,96 @@ header {
     border: 1px solid #000;
     margin-right: 15px;
 }
-.item{
+
+.article {
+    line-height: 2;
+}
+
+.item {
     /* border: 1px solid red; */
     display: flex;
 }
+
+
 /*  */
-.center-section{
-    background: blue;
+
+.center-section {
     height: 200px;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+    line-height: 2;
+    font-size: 25px;
+    padding: 20px 60px;
+    margin: 20 0px;
+    background: darkgray;
 }
-.table-of-content{
+
+.center-section>* {
+    background: darkgray;
+}
+
+.center-section a {
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1 em;
+    margin-bottom: 10px;
+}
+
+.table-of-content {
     width: 300px;
     height: 30px;
     background: #fff;
     border-radius: 6px;
 }
-.book{
-   width: 50px;
-   height: 300px; 
-   background: #fff;
+
+.curated {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    height: 500px;
+}
+
+.curated-item {
+    margin: 5%;
+    padding: 5%;
+}
+
+.curated-item h3 {
+    font-size: 1.5em;
+    margin: 4px;
+}
+
+.curated-item li {
+    margin-left: 2%;
+    line-height: 2;
+    font-size: 20px;
+    list-style: circle;
+}
+
+
+/* .footer-newsletters {
+    /* background: red; */
+
+
+/* border: 1px solid red; */
+
+
+/* height: 500px; */
+
+
+/* border */
+
+
+/* } */
+
+.footer {
+    background-color: red;
+    border: 1px solid #000;
+    text-align: center;
+}
+
+.footer-links-options {
+    /* display: grid; */
+    /* grid-template-columns: repeat(autofit min-max(200px, 100vw)); */
+    background: #000;
 }
