--- a/src/css/main.css
+++ b/src/css/main.css
@@ -329,13 +329,32 @@ header {
 /* } */
 
 .footer {
-    background-color: red;
+    /* background-color: red; */
     border: 1px solid #000;
-    text-align: center;
+    display: flex;
+    
+    justify-content: center;
+    margin: auto;
+  
+    /* text-align: center; */
 }
-
-.footer-links-options {
-    /* display: grid; */
-    /* grid-template-columns: repeat(autofit min-max(200px, 100vw)); */
-    background: #000;
+/* 
+.footer-links-options  ul li{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    background: red;
+} */
+.grid{
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+    /* grid-template-rows: repeat(4, 1fr); */
+    /* background: blueviolet; */
+    /* font-size: 1.2rem; */
+    /* grid-auto-rows: 20px;
+    grid-column-gap: 0;
+    /* height: 250px; */
+    display: flex;
+      width: 75%;
+    height: 30vh; 
+    flex-flow: wrap;
 }
