--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,33 +10,42 @@
 }
 
 header {
-    background: #ADADAD;
+    background: darkgrey;
 }
 
 .header-div {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    /* grid-auto-flow: column; */
     padding-top: 20px;
     padding-bottom: 25px;
     justify-items: center;
 }
 
 .first-section {
-    /* background: blueviolet; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-content: center;
 }
 
 .content {
-    /* border: 1px solid #000; */
-    height: 900px;
+    height: 600px;
     display: flex;
     align-items: center;
 }
 
+.content p {
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 2;
+    padding: 0 5%;
+}
+
 .content:nth-child(1) {
+    background: #808080;
+}
+
+.content:nth-child(1) p {
     background: #808080;
 }
 
@@ -44,11 +53,23 @@ header {
     background: #8D8D8D;
 }
 
+.content:nth-child(2) p {
+    background: #8D8D8D;
+}
+
 .content:nth-child(3) {
     background: #8D8D8D;
 }
 
+.content:nth-child(3) p {
+    background: #8D8D8D;
+}
+
 .content:nth-child(4) {
+    background: #808080;
+}
+
+.content:nth-child(4) p {
     background: #808080;
 }
 
@@ -78,14 +99,20 @@ header {
     margin-bottom: 1%;
 }
 
-.latest-post-items li {
+.latest-post-items ul {
+    background: rgba(128, 128, 128, 0.7);
+}
+
+.latest-post-items ul li {
     list-style: circle;
     font-size: 19px;
     line-height: 30px;
+    background: rgba(128, 128, 128, 0.08);
 }
 
 .latest-post-items p {
     font-size: 30px;
+    background: rgba(128, 128, 128, 0.7);
 }
 
 .community {
@@ -191,8 +218,12 @@ header {
     margin: 40px 0;
 }
 
+.green-jumbotron p {
+    background: darkgrey;
+}
 
-/*  */
+
+/* person of the week */
 
 .person-of-the-week {
     padding-top: 55px;
@@ -223,7 +254,7 @@ header {
 }
 
 
-/*  */
+/* other persons */
 
 .other-persons {
     background: lightgrey;
@@ -252,15 +283,11 @@ header {
 }
 
 .item {
-    /* border: 1px solid red; */
     display: flex;
 }
 
-
-/*  */
-
 .center-section {
-    height: 200px;
+    height: 250px;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -280,11 +307,12 @@ header {
     font-weight: bold;
     font-size: 1 em;
     margin-bottom: 10px;
+    color: black;
 }
 
 .table-of-content {
     width: 300px;
-    height: 30px;
+    height: 35px;
     background: #fff;
     border-radius: 6px;
 }
@@ -353,8 +381,8 @@ header {
 
 /* smashing section ends */
 
-.footer {
-    background: #adadad;
+.footer>* {
+    background: darkgrey;
 }
 
 .footer-span {
@@ -364,39 +392,57 @@ header {
     padding: 3%;
     font-weight: bold;
     text-align: center;
-}
-.footer-links-options{
-    text-align: center;
-    background: cornflowerblue;
+    background: darkgrey;
 }
 
-.footer-links-options ul li{
-    list-style: disc;
-    /* background: red; */
-    
+.footer-links-options {
+    text-align: center;
+    background: cornflowerblue;
+    background: darkgrey;
 }
-.link{
+
+.footer-links-options ul {
+    background: darkgrey;
+}
+
+.footer-links-options ul li {
+    list-style: disc;
+    background: darkgrey;
+}
+
+.link {
     display: inline-block;
     padding-left: 0;
     font-size: calc(1.3em + .2vw);
     line-height: calc(1.2em + .2vw);
     word-break: break-word;
     margin: 0 10px;
+    background: darkgrey;
 }
-.about-us{
+
+.about-us {
     text-align: center;
     padding-top: 55px;
     font-size: 1.2rem;
     line-height: 1.2;
+    background: darkgrey;
 }
-.contact-us{
+
+.about-us p {
+    background: darkgrey;
+}
+
+.contact-us {
     padding-top: 30px;
     padding-bottom: 60px;
     text-align: center;
-    
-
 }
-.contact-us ul li{
+
+.contact-us ul {
+    background: darkgrey;
+}
+
+.contact-us ul li {
     display: inline-block;
     padding-left: 0;
     padding-top: 20px;
@@ -404,8 +450,9 @@ header {
     line-height: calc(1.2em + .2vw);
     word-break: break-word;
     margin: 0 10px;
-    /* border: 1px solid #000; */
+    background: darkgrey;
 }
-.contact-us ul li a{
-    color:#000;
+
+.contact-us ul li a {
+    color: #000;
 }
